--- a/Css/style.css
+++ b/Css/style.css
@@ -48,7 +48,6 @@
 
 /* menu */
 
-
 .menuText {
   border-bottom: 2px solid #81f781;
   text-decoration: none;
@@ -65,12 +64,12 @@
   color: #fff;
 }
 
-.menuText:focus{
+.menuText:focus {
   border-bottom: 2px solid #fff;
   color: #fff;
 }
 
-a{
+a {
   text-decoration: none;
   color: black;
 }
@@ -80,17 +79,14 @@ nav {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-}
-/*Have to adjust menu to center!:c*/
-.navMenu,
-li {
-  display: inline-block;
+  text-align: center;
+  width: 100%;
 }
 
-.navMenu,
-li{
-  padding-left: 10px;
-  padding-right: 10px;
+li {
+  display: inline-block;
+  padding-left: 4%;
+  padding-right: 4%;
   list-style: none;
 }
 
@@ -129,60 +125,51 @@ a:hover {
   margin-right: 1%;
 }
 
-.marcas
-{
+.marcas {
   text-align: center;
   display: inline-block;
   width: 100%;
 }
 
-.marca
-{
+.marca {
   display: inline-block;
   width: auto;
   vertical-align: middle;
 }
 
-.marcasTablet
-  {
-    position: absolute;
-    visibility: hidden;
-  }
-  
-  .marcaTablet
-  {
-    position: absolute;
-    visibility: hidden;
-  }
+.marcasTablet {
+  position: absolute;
+  visibility: hidden;
+}
+
+.marcaTablet {
+  position: absolute;
+  visibility: hidden;
+}
 
 /*********Marcas da pagina marcas*/
 
-.marcasI
-{
+.marcasI {
   text-align: center;
   display: inline-block;
   width: 100%;
- 
 }
 
-.marcaI
-{
+.marcaI {
   display: inline-block;
   width: auto;
   vertical-align: middle;
 }
 
-.marcasTabletI
-  {
-    position: absolute;
-    visibility: hidden;
-  }
-  
-  .marcaTabletI
-  {
-    position: absolute;
-    visibility: hidden;
-  }
+.marcasTabletI {
+  position: absolute;
+  visibility: hidden;
+}
+
+.marcaTabletI {
+  position: absolute;
+  visibility: hidden;
+}
 
 /*******************/
 
@@ -194,13 +181,11 @@ a:hover {
   font-family: "Roboto", sans-serif;
 }
 
-.gallery
-{
+.gallery {
   width: 110%;
 }
 
-.photo
-{
+.photo {
   border-radius: 10px;
   border: 2px white solid;
   background-color: black;
@@ -333,33 +318,34 @@ textarea.form-control {
 }
 /*End contact Section */
 
-@media only screen and (max-width: 992px) { /*Tablet*/
-  
+@media only screen and (max-width: 992px) {
+  /*Tablet*/
+
   /* header */
-  
+
   .header {
     background: #81f781;
   }
-  
+
   /* top */
-  
+
   .top {
     width: 100%;
     padding-top: 1%;
     vertical-align: middle;
     text-align: center;
   }
-  
+
   .logo {
     vertical-align: middle;
     display: inline-block;
     width: auto;
   }
-  
+
   .logoIMG {
     height: 70px;
   }
-  
+
   .weatherWidget {
     visibility: hidden;
   }
@@ -371,7 +357,7 @@ textarea.form-control {
     margin-top: -15%;
     position: inherit;
   }
-  
+
   /* menu */
 
   .menuText {
@@ -384,12 +370,12 @@ textarea.form-control {
     padding-top: 1%;
     padding-bottom: 1%;
   }
-  
+
   .menuText:hover {
     border-bottom: 2px solid #fff;
     color: #fff;
   }
-  
+
   nav {
     background-color: #81f781;
     position: -webkit-sticky;
@@ -403,39 +389,39 @@ textarea.form-control {
   li {
     display: inline-block;
   }
-  
+
   .navMenu,
-  li{
+  li {
     padding-top: 1%;
     padding-left: 5px;
     padding-right: 5px;
-    list-style:none;
+    list-style: none;
     text-align: center;
   }
-  
+
   .navMenu,
   li,
   a:hover {
     color: #f5f6ce;
     text-decoration: none;
   }
-  
+
   /* main */
-  
+
   .slideshow {
     width: 100%;
   }
-  
+
   .slideshowGaleria {
     width: 100%;
     margin: 20px;
   }
-  
+
   .slideshowimgs {
     width: 100%;
     height: 400px;
   }
-  
+
   .news {
     width: auto;
     float: right;
@@ -443,21 +429,18 @@ textarea.form-control {
     visibility: hidden;
     position: absolute;
   }
-  
-  .marcas
-  {
-    visibility: hidden;
-    position: absolute;
-  }
-  
-  .marca
-  {
+
+  .marcas {
     visibility: hidden;
     position: absolute;
   }
 
-  .marcasTablet
-  {
+  .marca {
+    visibility: hidden;
+    position: absolute;
+  }
+
+  .marcasTablet {
     text-align: center;
     display: inline-block;
     width: 100%;
@@ -465,32 +448,28 @@ textarea.form-control {
     visibility: visible;
     position: inherit;
   }
-  
-  .marcaTablet
-  {
+
+  .marcaTablet {
     display: inline-block;
     width: 30%;
     vertical-align: middle;
     visibility: visible;
     position: inherit;
   }
-  
+
   /*********Marcas da pagina marcas**********/
 
-  .marcasI
-  {
-    visibility: hidden;
-    position: absolute;
-  }
-  
-  .marcaI
-  {
+  .marcasI {
     visibility: hidden;
     position: absolute;
   }
 
-  .marcasTabletI
-  {
+  .marcaI {
+    visibility: hidden;
+    position: absolute;
+  }
+
+  .marcasTabletI {
     text-align: center;
     display: inline-block;
     width: 100%;
@@ -498,9 +477,8 @@ textarea.form-control {
     visibility: visible;
     position: inherit;
   }
-  
-  .marcaTabletI
-  {
+
+  .marcaTabletI {
     display: inline-block;
     width: 30%;
     vertical-align: middle;
@@ -508,7 +486,7 @@ textarea.form-control {
     position: inherit;
   }
   /******************************************/
-  
+
   .welcome {
     margin-left: 1%;
     width: 54%;
@@ -516,14 +494,12 @@ textarea.form-control {
     margin-left: 11%;
     font-family: "Roboto", sans-serif;
   }
-  
-  .gallery
-  {
+
+  .gallery {
     width: 100%;
   }
-  
-  .photo
-  {
+
+  .photo {
     border-radius: 10px;
     border: 2px white solid;
     background-color: black;
@@ -531,7 +507,7 @@ textarea.form-control {
     width: 32.7%;
     height: 200px;
   }
-  
+
   h1 {
     font-size: 1.5em;
     font-weight: bold;
@@ -539,9 +515,9 @@ textarea.form-control {
   h2 {
     font-size: large;
   }
-  
+
   /* footer */
-  
+
   .footerBottom {
     padding-left: 1%;
     padding-top: 1%;
@@ -551,29 +527,29 @@ textarea.form-control {
     background-color: #333;
     color: #fff;
   }
-  
+
   .wheretofindusFooter {
     float: left;
   }
-  
+
   .contactusFooter {
     float: left;
     margin-right: 4%;
   }
-  
+
   .openFooter {
     float: left;
     width: 100%;
     padding-top: 3%;
     padding-bottom: 2%;
   }
-  
+
   /* form */
-  
+
   .mapa {
     height: none;
   }
-  
+
   .form-control {
     background-color: #fff;
     border-color: #a4a4a4;
@@ -582,32 +558,32 @@ textarea.form-control {
     box-shadow: none;
     font-size: 20px;
   }
-  
+
   textarea.form-control {
     min-height: 180px;
     resize: none;
     font-size: 20px;
   }
-  
+
   .form-group {
     margin-bottom: 30px;
     font-size: 20px;
   }
-  
+
   .contact-info {
     color: #000;
   }
-  
+
   .contact-a:hover {
     color: #81f781;
   }
-  
+
   .contact-address {
     float: right;
     margin-left: 4%;
     width: 35.3333%;
   }
-  
+
   .btn {
     width: 160px;
     margin: 20px;
@@ -615,49 +591,48 @@ textarea.form-control {
   }
 }
 
-@media only screen and (max-width: 600px) { /*Phone*/
+@media only screen and (max-width: 600px) {
+  /*Phone*/
   * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
   }
-  
+
   /* header */
-  
+
   .header {
     justify-content: space-between;
     background: #81f781;
   }
-  
+
   /* top */
-  
+
   .top {
     width: auto;
     padding-top: 1%;
     vertical-align: middle;
     text-align: center;
   }
-  
+
   .logo {
     vertical-align: middle;
     display: inline-block;
     width: auto;
   }
-  
+
   .logoIMG {
     height: 70px;
   }
-  
+
   .weatherWidget {
     vertical-align: middle;
     display: inline-block;
     visibility: hidden;
   }
 
-
-  
   /* menu */
-  
+
   .menuText,
   li,
   a {
@@ -669,28 +644,28 @@ textarea.form-control {
     padding-top: 1%;
     padding-bottom: 1%;
   }
-  
+
   .menuText {
     border-bottom: 2px solid #81f781;
   }
-  
+
   .menuText:hover {
     border-bottom: 2px solid #fff;
     color: #fff;
   }
-  
+
   nav {
     background-color: #81f781;
     position: -webkit-sticky;
     position: sticky;
     top: 0;
   }
-  
+
   .navMenu,
   li {
     display: inline-block;
   }
-  
+
   .navMenu,
   li,
   a {
@@ -698,27 +673,27 @@ textarea.form-control {
     padding-right: 25px;
     list-style: none;
   }
-  
+
   .navMenu,
   li,
   a:hover {
     color: #f5f6ce;
     text-decoration: none;
   }
-  
+
   /* main */
-  
+
   .main {
     font-family: "Roboto", sans-serif;
   }
-  
+
   .slideshow {
     margin-left: 20px;
     width: 78%;
     margin: auto;
     margin-top: 20px;
   }
-  
+
   .slideshowGaleria {
     margin-top: 20px;
     width: 78%;
@@ -726,50 +701,45 @@ textarea.form-control {
     margin-top: 20px;
     margin-left: 22%;
   }
-  
+
   .slideshowimgs {
     width: 70%;
     height: 400px;
   }
-  
+
   .news {
     width: auto;
     float: right;
     margin-right: 1%;
   }
-  
-  .marcas
-  {
+
+  .marcas {
     text-align: center;
     display: inline-block;
     width: 140%;
     margin-left: -130px;
   }
-  
-  .marca
-  {
+
+  .marca {
     display: inline-block;
     width: auto;
     vertical-align: middle;
   }
-  
+
   /*********Marcas da pagina marcas*/
-  .marcasI
-  {
+  .marcasI {
     text-align: center;
     display: inline-block;
     width: 100%;
-   
   }
-  
-  .marcaI
-  {
+
+  .marcaI {
     display: inline-block;
     width: auto;
     vertical-align: middle;
   }
   /*******************/
-  
+
   .welcome {
     margin-left: 1%;
     width: 54%;
@@ -777,15 +747,13 @@ textarea.form-control {
     margin-left: 11%;
     font-family: "Roboto", sans-serif;
   }
-  
-  .gallery
-  {
+
+  .gallery {
     width: 110%;
     background-color: red;
   }
-  
-  .photo
-  {
+
+  .photo {
     border-radius: 10px;
     border: 2px white solid;
     background-color: black;
@@ -793,7 +761,7 @@ textarea.form-control {
     width: 33%;
     height: 300px;
   }
-  
+
   h1 {
     font-size: 1.5em;
     font-weight: bold;
@@ -801,13 +769,13 @@ textarea.form-control {
   h2 {
     font-size: large;
   }
-  
+
   /* footer */
-  
+
   footer {
     font-family: "Roboto", sans-serif;
   }
-  
+
   .footerBottom {
     padding-left: 20px;
     padding-top: 20px;
@@ -817,27 +785,27 @@ textarea.form-control {
     background-color: #333;
     color: #fff;
   }
-  
+
   .wheretofindusFooter {
     float: left;
   }
-  
+
   .contactusFooter {
     margin-left: 20%;
     float: left;
   }
-  
+
   .openFooter {
     float: right;
     margin-right: 20px;
   }
-  
+
   /* form */
-  
+
   .mapa {
     height: none;
   }
-  
+
   .form-control {
     background-color: #fff;
     border-color: #a4a4a4;
@@ -846,32 +814,32 @@ textarea.form-control {
     box-shadow: none;
     font-size: 20px;
   }
-  
+
   textarea.form-control {
     min-height: 180px;
     resize: none;
     font-size: 20px;
   }
-  
+
   .form-group {
     margin-bottom: 30px;
     font-size: 20px;
   }
-  
+
   .contact-info {
     color: #000;
   }
-  
+
   .contact-a:hover {
     color: #81f781;
   }
-  
+
   .contact-address {
     float: right;
     margin-left: 4%;
     width: 35.3333%;
   }
-  
+
   .btn {
     width: 160px;
     margin: 20px;
