--- a/Css/style.css
+++ b/Css/style.css
@@ -1,6 +1,8 @@
 /* @import url("https://fonts.googleapis.com/css2?family=Sarabun:wght@200;300&display=swap"); */
 /*rgba(255, 255, 255, 0) transparent*/
 /*Letra roboto não está a funcionar ;-; por isso até resposta postetior ira ser arial*/
+/*Novo verde para testar :3 : #006600*/
+
 
 * {
   box-sizing: border-box;
@@ -18,7 +20,7 @@ a {
 
 .header {
   justify-content: space-between;
-  background: #4a3302;
+  background: #604020;
 }
 
 /*top*/
@@ -64,7 +66,7 @@ a {
 /*menu*/
 
 .menuText {
-  border-bottom: 2px solid #4a3302;
+  border-bottom: 2px solid #604020;
   text-decoration: none;
   color: black;
   font-family: sans-serif;
@@ -87,7 +89,7 @@ a {
 }
 
 nav {
-  background-color: #4a3302;
+  background-color: #604020;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
@@ -239,7 +241,7 @@ a:hover {
   margin-top: 6%;
 }
 
-.tituloCategoria{
+.tituloCategoria {
   color: white;
   font-weight: bold;
   margin-top: 70%;
@@ -648,11 +650,12 @@ h2 {
   font-size: large;
 }
 
-@media only screen and (max-width: 992px) { /*Tablet*/
+@media only screen and (max-width: 992px) {
+  /*Tablet*/
   /* header */
 
   .header {
-    background: #4a3302;
+    background: #604020;
   }
 
   /* top */
@@ -699,7 +702,7 @@ h2 {
   }
 
   .menuText {
-    border-bottom: 2px solid #4a3302;
+    border-bottom: 2px solid #604020;
     text-decoration: none;
     color: black;
     font-family: sans-serif;
@@ -717,7 +720,7 @@ h2 {
   }
 
   nav {
-    background-color: #4a3302;
+    background-color: #604020;
     position: -webkit-sticky;
     position: sticky;
     top: 0;
@@ -767,7 +770,7 @@ h2 {
     margin-left: -3%;
   }
 
-  .tituloCategoria{
+  .tituloCategoria {
     margin-top: 70%;
   }
 
@@ -1002,7 +1005,8 @@ h2 {
   /*EndFooter*/
 }
 
-@media only screen and (max-width: 600px) { /*Phone*/
+@media only screen and (max-width: 600px) {
+  /*Phone*/
   * {
     box-sizing: border-box;
     margin: 0;
@@ -1013,7 +1017,7 @@ h2 {
 
   .header {
     justify-content: space-between;
-    background: #4a3302;
+    background: #604020;
   }
 
   /* top */
@@ -1092,7 +1096,7 @@ h2 {
   }
 
   .menuText {
-    border-bottom: 2px solid #4a3302;
+    border-bottom: 2px solid #604020;
     visibility: hidden;
     position: -webkit-sticky;
     position: sticky;
@@ -1107,7 +1111,7 @@ h2 {
 
   nav {
     padding-top: 10%;
-    background-color: #4a3302;
+    background-color: #604020;
     position: -webkit-sticky;
     position: sticky;
     top: 0;
@@ -1167,7 +1171,7 @@ h2 {
     margin-top: 3%;
   }
 
-  .tituloCategoria{
+  .tituloCategoria {
     margin-top: 70%;
   }
 
@@ -1193,7 +1197,6 @@ h2 {
   .prev {
     margin-left: -6%;
   }
-
 
   .welcome {
     width: 98%;
