--- a/Css/style.css
+++ b/Css/style.css
@@ -1038,8 +1038,7 @@ h2 {
   /*EndFooter*/
 }
 
-@media only screen and (max-width: 600px) {
-  /*Phone*/
+@media only screen and (max-width: 600px) { /*Phone*/
   * {
     box-sizing: border-box;
     margin: 0;
@@ -1107,6 +1106,7 @@ h2 {
     position: sticky;
     top: 0;
     margin-top: -50%;
+    color: gray;
   }
 
   /* .downBtn {
