--- a/Css/style.css
+++ b/Css/style.css
@@ -685,8 +685,7 @@ h2 {
   font-size: large;
 }
 
-@media only screen and (max-width: 992px) {
-  /*Tablet*/
+@media only screen and (max-width: 992px) { /*Tablet*/
   /* header */
 
   .header {
@@ -1050,7 +1049,6 @@ h2 {
 
   .header {
     justify-content: space-between;
-    background: #604020;
   }
 
   /* top */
@@ -1073,14 +1071,11 @@ h2 {
   }
 
   .weatherWidget {
-    position: absolute;
-    visibility: hidden;
+    display: none;
   }
 
   .weatherWidgetTablet {
-    visibility: hidden;
-    position: absolute;
-    left: -99999px;
+    display: none;
   }
 
   .weatherWidgetPhone {
@@ -1117,16 +1112,9 @@ h2 {
     visibility: hidden;
   }
 
-  .menuText,
-  li,
-  a {
-    text-decoration: none;
-    color: black;
-    font-family: sans-serif;
+  .menuText{
     font-size: 20px;
-    font-weight: 500;
-    padding-top: 1%;
-    padding-bottom: 1%;
+    font-weight: bold;
   }
 
   .menuText {
@@ -1160,13 +1148,6 @@ h2 {
     padding-bottom: 1%;
     width: 100%;
     list-style: none;
-  }
-
-  .navMenu,
-  li,
-  a:hover {
-    color: white;
-    text-decoration: none;
   }
 
   /* main */
@@ -1238,7 +1219,6 @@ h2 {
   }
 
   .photo {
-    /* background-color: black; */
     display: inline-block;
     width: 100%;
     height: 300px;
@@ -1328,7 +1308,6 @@ h2 {
   .suporteFooter {
     float: left;
     font-size: 14px;
-    /* margin-left: 35%; */
     border-right: none;
     height: 80px;
     margin-top: 2%;
