--- a/Css/style.css
+++ b/Css/style.css
@@ -114,14 +114,12 @@ a:hover {
   text-decoration: none;
 }
 
-.downArrow
-{
+.downArrow {
   font-size: 20px;
   vertical-align: middle;
 }
 
-.dropDownProducsMenu
-{
+.dropDownProducsMenu {
   position: absolute;
   position: -webkit-sticky;
   position: sticky;
@@ -134,8 +132,7 @@ a:hover {
   margin-left: 42%;
 }
 
-.selectPM
-{
+.selectPM {
   color: black;
   padding-top: 1%;
   padding-bottom: 1%;
@@ -143,8 +140,7 @@ a:hover {
   width: 100%;
 }
 
-.selectPM:hover
-{
+.selectPM:hover {
   color: white;
 }
 /*End menu*/
@@ -208,7 +204,7 @@ a:hover {
   font-size: 30px;
   vertical-align: middle;
   position: absolute;
-  display : none;
+  display: none;
   z-index: 99999999;
 }
 
@@ -222,7 +218,7 @@ a:hover {
   padding-right: 5px;
   font-size: 30px;
   vertical-align: middle;
-  display : none;
+  display: none;
 }
 
 .searchMG:hover {
@@ -237,7 +233,7 @@ a:hover {
   padding-top: 5px;
   border: none;
   margin-left: 8%;
-  display : none;
+  display: none;
 }
 
 .searchBar:focus {
@@ -269,6 +265,10 @@ a:hover {
   margin-right: 2.5%;
   margin-bottom: 1%;
   margin-top: 1%;
+}
+
+.productsCategoriesplaceHolders:hover {
+  background-color: #604020;
 }
 
 .categoriesIcons {
@@ -354,12 +354,14 @@ a:hover {
 /*marcas da pagina marcas*/
 
 .marcasGallery {
-  width: 100%;
-  
+  width: 20%;
+  height: 269.8px;
   float: left;
-  padding-top: 1%;
-  padding-bottom: 1%;
-  padding-left: 1%;
+  background-color: #fff;
+  margin-left: 2.5%;
+  margin-right: 2.5%;
+  margin-bottom: 1%;
+  margin-top: 1%;
 }
 
 .marcaGallery {
@@ -566,7 +568,6 @@ footer {
   padding-right: 1%;
   border-right: solid white 1px;
   height: 80px;
-  
 }
 
 .livrodereclamacoesFooter {
@@ -689,7 +690,8 @@ h2 {
   font-size: large;
 }
 
-@media only screen and (max-width: 992px) { /*Tablet*/
+@media only screen and (max-width: 992px) {
+  /*Tablet*/
   /* header */
 
   .header {
@@ -1042,7 +1044,8 @@ h2 {
   /*EndFooter*/
 }
 
-@media only screen and (max-width: 600px) { /*Phone*/
+@media only screen and (max-width: 600px) {
+  /*Phone*/
   * {
     box-sizing: border-box;
     margin: 0;
@@ -1116,7 +1119,7 @@ h2 {
     visibility: hidden;
   }
 
-  .menuText{
+  .menuText {
     font-size: 20px;
     font-weight: bold;
   }
